updated index page route for cars and home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,23 +9,8 @@
 </head>
 
 <body>
-    <h1>Index Page</h1>
-    <ul>
-        <%cars.forEach((car)=>{%>
-            <li>Make: <%=car.make%>
-            </li>
-            <li>Model: <%=car.model%>
-            </li>
-            <li>Year: <%=car.year%>
-            </li>
-            <li>Engine Type: <%=car.engineType%>
-            </li>
-            <li>Description: <%=car.description%>
-            </li>
-            <li>Rating: <%=car.rating%>
-            </li>
-            <%}); %>
-    </ul>
+    <h1>Home Page</h1>
+    <a href="/cars">Cars Expo</a>
 </body>
 
 </html>
