added working get routes for show and new views

--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -24,6 +24,8 @@
             </li>
             <li>Rating: <%=car.rating%>
             </li>
+            <li><a href="/cars/<%=car._id%>">Details</a>
+            </li>
             <%}); %>
     </ul>
 </body>
