displayed data on show route

--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -10,6 +10,20 @@
 
 <body>
     <h1>Details</h1>
+    <ul>
+        <li>Make: <%=car.make%>
+        </li>
+        <li>Model: <%=car.model%>
+        </li>
+        <li>Year: <%=car.year%>
+        </li>
+        <li>Engine Type: <%=car.engineType%>
+        </li>
+        <li>Description: <%=car.description%>
+        </li>
+        <li>Rating: <%=car.rating%>
+        </li>
+    </ul>
 </body>
 
 </html>
