--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,9 @@
 <header>
     <nav>
-        <ul>
-            <li class="nav-links">Home</li>
-            <li class="nav-links">All Cars</li>
-            <li class="nav-links">Login/Logout</li>
-            <li href="/cars/new" class="nav-links">Add New Car</li>
-        </ul>
+        <a class="nav-links" href="/">Home</a>
+        <a class="nav-links" href="/cars">Inventory</a>
+        <a class="nav-links" href="/cars/new">Add Car</a>
+        <a class="nav-links" href="#">Login/Logout</a>
     </nav>
     <h1>
         <%=title%>
