--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head')%>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cars | Express Projects</title>
-</head>
+    <body>
+        <%- include('partials/header')%>
+            <main>
 
-<body>
-    <h1>Home Page</h1>
-    <a href="/cars">Cars Expo</a>
-</body>
+            </main>
+    </body>
 
-</html>
+    </html>
