--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,14 @@
 <header>
     <nav>
+        <img src="/imgs/home-car-icon.png" alt="home icon" href="/">
         <a class="nav-links" href="/">Home</a>
         <a class="nav-links" href="/cars">Inventory</a>
         <a class="nav-links" href="/cars/new">Add Car</a>
-        <a class="nav-links" href="#">Login/Logout</a>
+        <%if(loggedIn) {%>
+            <a class="nav-links" href="#">Logout</a>
+            <%} else {%>
+                <a class="nav-links" href="/users/signin">Login</a>
+                <%}%>
     </nav>
     <h1>
         <%=title%>
