restricted view access to standard user and create access to admin user

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <header>
     <nav>
-        <img src="/imgs/home-car-icon.png" alt="home icon" href="/">
+        <a href="/">
+            <img src="/imgs/home-car-icon.png" alt="home-icon">
+        </a>
         <a class="nav-links" href="/">Home</a>
         <a class="nav-links" href="/cars">Inventory</a>
         <a class="nav-links" href="/cars/new">Add Car</a>
