--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
         <a class="nav-links" href="/cars">Inventory</a>
         <a class="nav-links" href="/cars/new">Add Car</a>
         <%if(loggedIn) {%>
-            <a class="nav-links" href="#">Logout</a>
+            <a class="nav-links" href="/users/logout">Logout</a>
             <%} else {%>
                 <a class="nav-links" href="/users/signin">Login</a>
                 <%}%>
