--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -13,7 +13,7 @@
                     <input type="submit" value="Login">
                 </form>
             </fieldset>
-            <a href="/users/signup">Register</a>
+            <a href="/users/new">Register</a>
     </body>
 
     </html>
