--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
-</head>
-
-<body>
-    <h1>Edit Car</h1>
+<%- include('../partials/header')%>
     <form action="/cars/<%=car._id%>?_method=PUT" method="POST">
         <label>Make:
             <input type="text" name="make" value="<%= car.make %>">
@@ -31,6 +20,6 @@
             <input type="submit" value="Edit">
         </label>
     </form>
-</body>
+    </body>
 
-</html>
+    </html>
