--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Details</title>
-</head>
-
-<body>
-    <h1>New Car</h1>
+<%- include('../partials/header')%>
     <form action="/cars" method="POST">
         <label>Make:
             <input type="text" name="make">
@@ -39,6 +28,6 @@
             <input type="submit" value="ADD">
         </label>
     </form>
-</body>
+    </body>
 
-</html>
+    </html>
