--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,35 @@
-<header>
-    <nav>
-        <a href="/">
-            <img src="/imgs/home-car-icon.png" alt="home-icon">
-        </a>
-        <a class="nav-links" href="/">Home</a>
-        <a class="nav-links" href="/cars">Inventory</a>
-        <a class="nav-links" href="/cars/new">Add Car</a>
-        <%if(loggedIn) {%>
-            <a class="nav-links" href="/users/logout">Logout</a>
-            <%} else {%>
-                <a class="nav-links" href="/users/signin">Login</a>
-                <%}%>
-    </nav>
-    <h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
         <%=title%>
-    </h1>
-</header>
+    </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="/">
+                <img class="nav-image" src="/imgs/mustang.png" alt="home-icon">
+            </a>
+            <a class="nav-links" href="/">Home</a>
+            <a class="nav-links" href="/cars">Inventory</a>
+            <a class="nav-links" href="/cars/new">Add Car</a>
+            <%if(loggedIn) {%>
+                <a class="nav-links" href="/users/logout">Logout</a>
+                <%} else {%>
+                    <a class="nav-links" href="/users/signin">Login</a>
+                    <%}%>
+        </nav>
+        <h1>
+            <%=title%>
+        </h1>
+    </header>
