added styling to login inverntory and added background image

--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -2,7 +2,7 @@
     <main>
         <%cars.forEach((car)=>{%>
             <article class="car-container">
-                <img src="<%=car.image%>" alt="<%=car.model%>">
+                <img class="car-image" src="<%=car.image%>" alt="<%=car.model%>">
                 <dir class="car-details">
                     <p>Make: <%=car.make%>
                     </p>
