--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,65 @@
 nav {
     display: flex;
-    justify-content: space-between;
-    background-color: aqua;
+    justify-content: space-around;
+    background-color: rgb(240, 240, 240);
+    align-items: center;
 }
 .nav-links {
     display: inline;
 }
+.nav-image {
+    max-width: 
+    50px;
+}
 h1 {
     text-align: center;
 }
-img {
+.car-image {
     max-width: 250px;
+    margin: 0,0,0,10px;
+    border-radius: 10px;
 }
-
-.car-container {
+.car-container{
     display: flex;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px black,
+                -1px -1px 10px #ddd,
+                1px -1px 10px #ddd,
+                -1px 1px 10px #ddd;
+    background-color: rgba(45,54,103, .4);
+    color: white;
 }
-
+html,body {
+    background-image: url('/imgs/backgound.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+}
+/* #login-form {
+    width: 40vw;
+    height: 50vw;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #ddd,
+                -1px -1px 10px #ddd,
+                1px -1px 10px #ddd,
+                -1px 1px 10px #ddd;
+  } */
+fieldset {
+    width: 25vw;
+    height: 30vw;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #ddd,
+                -1px -1px 10px #ddd,
+                1px -1px 10px #ddd,
+                -1px 1px 10px #ddd;
+}
+legend {
+    padding: 0px 10px;
+    font-weight: 500;
+}
