--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,10 @@
     <title>
         <%=title%>
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -19,8 +21,8 @@
         <nav>
             <a href="/">
                 <img class="nav-image" src="/imgs/mustang.png" alt="home-icon">
+                Home
             </a>
-            <a class="nav-links" href="/">Home</a>
             <a class="nav-links" href="/cars">Inventory</a>
             <a class="nav-links" href="/cars/new">Add Car</a>
             <%if(loggedIn) {%>
