updated styling and server.js

--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -12,6 +12,9 @@
         <label>Engine Type:
             <input type="text" name="engineType" value="<%= car.engineType %>">
         </label>
+        <label>Image::
+            <input type="text" name="image" value="<%= car.image %>">
+        </label>
         <label>Description:
             <textarea name="description"><%= car.description %></textarea>
             <!-- There no value attribute for textarea -->
