--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,8 +19,13 @@ h1 {
     margin: 0,0,0,10px;
     border-radius: 10px;
 }
+.index-container{
+    display: flex;
+    flex-wrap: wrap;
+}
 .car-container{
     display: flex;
+    width: 450px;
     border-radius: 10px;
     box-shadow: 1px 1px 10px black,
                 -1px -1px 10px #ddd,
