--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -12,17 +12,11 @@
         <label>Engine Type:
             <input type="text" name="engineType">
         </label>
-        <label>Description
-            <textarea name="description"></textarea>
+        <label> Image:
+            <input type="text" name="image" placeholder="Image URL">
         </label>
-        <label>Rating
-            <select name="rating">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
+        <label>Description:
+            <textarea name="description"></textarea>
         </label>
         <label>
             <input type="submit" value="ADD">
