--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+html,body {
+    background-image: url('/imgs/backgound.jpg');
+    background-size: cover;
+    position: sticky;
+    background-repeat: no-repeat;
+}
 nav {
     display: flex;
     justify-content: space-around;
@@ -34,24 +40,7 @@ h1 {
     background-color: rgba(45,54,103, .4);
     color: white;
 }
-html,body {
-    background-image: url('/imgs/backgound.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-}
-/* #login-form {
-    width: 40vw;
-    height: 50vw;
-    margin: 50px auto;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    box-shadow: 1px 1px 10px #ddd,
-                -1px -1px 10px #ddd,
-                1px -1px 10px #ddd,
-                -1px 1px 10px #ddd;
-  } */
+
 fieldset {
     width: 25vw;
     height: 30vw;
