--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,5 @@
 <%- include('partials/header')%>
     <main>
-
+        <p>Welcome to 2021 SEIR Car Expo. Feel free to browse the collection and place a bid</p>
     </main>
-    </body>
-
-    </html>
+    <%- include('partials/footer')%>
