--- a/views/bids/index.ejs
+++ b/views/bids/index.ejs
@@ -28,6 +28,4 @@
             </tbody>
         </table>
         <%});%>
-            </body>
-
-            </html>
+            <%- include('../partials/footer')%>
