--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,17 +1,19 @@
 <%- include('../partials/header')%>
-    <fieldset class="user-form">
-        <legend>Registration</legend>
-        <form action="/users/signup" method="post">
-            <label>Email:
-                <input type="email" name="email">
-            </label>
-            <label>Username:
-                <input type="text" name="username">
-            </label>
-            <label>Password:
-                <input type="password" name="password">
-            </label>
-            <input type="submit" value="Register">
-        </form>
-    </fieldset>
+    <main>
+        <fieldset class="user-form">
+            <legend>Registration</legend>
+            <form action="/users/signup" method="post">
+                <label>Email:
+                    <input type="email" name="email">
+                </label>
+                <label>Username:
+                    <input type="text" name="username">
+                </label>
+                <label>Password:
+                    <input type="password" name="password">
+                </label>
+                <input type="submit" value="Register">
+            </form>
+        </fieldset>
+    </main>
     <%- include('../partials/footer')%>
