--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,13 @@ html,body {
     position: sticky;
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative;
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
+}
+main {
+    flex: 1;
+    margin: 0 0 15px 0;
 }
 nav {
     display: flex;
@@ -31,6 +36,7 @@ h1 {
 .index-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .car-container{
     display: flex;
@@ -123,7 +129,4 @@ footer {
     text-align: center;
     background-color: black;
     color: white;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
