more styling and footer update

--- a/views/bids/index.ejs
+++ b/views/bids/index.ejs
@@ -1,25 +1,29 @@
 <%- include('../partials/header')%>
     <main>
         <%cars.forEach((car)=>{%>
-            <h3>
-                <%=`${car.year} ${car.make} ${car.model}`%>
-            </h3>
-            <table>
+            <table class="table table-dark table-striped caption-top">
+                <caption>
+                    <%=`${car.year} ${car.make} ${car.model}`%>
+                </caption>
                 <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Phone Number</th>
-                        <th>Amount</th>
+                    <tr class="table-primary">
+                        <th scope="col">Name</th>
+                        <th scope="col">Phone Number</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Amount</th>
                     </tr>
                 </thead>
                 <tbody>
                     <%car.bids.forEach((bid)=>{%>
-                        <tr>
-                            <td>
+                        <tr class="table-success">
+                            <th scope="row">
                                 <%=`${bid.firstName} ${bid.lastName}`%>
-                            </td>
+                            </th>
                             <td>
                                 <%=bid.phone%>
+                            </td>
+                            <td>
+                                <%=bid.username%>
                             </td>
                             <td>
                                 <%=bid.amount%>
