--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -14,7 +14,7 @@
                     <h4>
                         <a href="/cars/<%=car._id%>/edit">Edit</a>
                         <form action="/cars/<%=car._id%>?_method=DELETE" method="POST">
-                            <button type="submit">Delete</button>
+                            <button class="btn btn-danger" type="submit">Delete</button>
                         </form>
                     </h4>
                     <%}%>
