--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header')%>
     <main>
-        <p>Welcome to 2021 SEIR Car Expo. Feel free to browse the collection and place a bid</p>
+        <div id="home-page">
+            <p>Welcome to 2021 SEIR Car Expo. Login or register below to browse the collection and
+                place a bid</p>
+            <a class="nav-links" href="/users/signin">Login</a>
+            <a class="nav-links" href="/users/new">Register</a>
+        </div>
     </main>
     <%- include('partials/footer')%>
