--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,11 @@
 <footer>
-    <p>This is a footer</p>
+    <p>&copy; Created by Abdi Hussein</p>
+    <a target="_blank" href="https://github.com/abdi-hu/cars-expo">
+        <img src="/imgs/github.png" alt="github-icon">
+    </a>
+    <a target="_blank" href="https://www.linkedin.com/in/abdisamad-hussein/">
+        <img src="/imgs/linkedin.png" alt="linkedin-icon">
+    </a>
 </footer>
 </body>
 
