--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -9,7 +9,7 @@
                 <label>Password:
                     <input type="password" name="password">
                 </label>
-                <input type="submit" value="Login">
+                <input class="btn btn-primary" type="submit" value="Login">
             </form>
             <form action="/users/new">
                 <input type="submit" value="Register" />
