--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,21 @@ legend {
     text-shadow: 2px 2px 3px red;
 }
 footer {
-    text-align: center;
-    background-color: black;
-    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: white;
 }
+footer img {
+    max-height: 15px;
+    margin: 0 5px 0 5px;
+}
+#home-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    text-shadow: 2px 2px 3px red;
+}
+a:link {
+    text-decoration: none;
+  }
