--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,7 @@ h1 {
                 -1px 1px 10px #ddd;
     background-color: rgba(45,54,103, .4);
     color: white;
+    backdrop-filter: blur(6px);
 }
 
 .user-form {
@@ -124,6 +125,7 @@ legend {
     border-radius: 10px;
     color: white;
     text-shadow: 2px 2px 3px red;
+    backdrop-filter: blur(6px);
 }
 footer {
     display: flex;
