remove unused code and add comments

--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -45,7 +45,7 @@
                         <input type="Number" name="phone">
                     </label>
                     <label>Amount:
-                        <input type="Number" name="amount">
+                        <input type="Number" name="amount" step=".01">
                     </label>
                     <input type="submit" value="Place Bid">
                 </form>
