--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header')%>
     <main>
         <div id="home-page">
-            <p>Welcome to 2021 SEIR Car Expo. Login or register below to browse the collection and
+            <p>Welcome to 2021 Perseverance Car Expo. Login or register below to browse the collection and
                 place a bid</p>
             <a class="nav-links" href="/users/signin">Login</a>
             <a class="nav-links" href="/users/new">Register</a>
