--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,4 +145,8 @@ footer img {
 }
 a:link {
     text-decoration: none;
-  }
+ }
+caption {
+    color: black;
+    text-shadow: 2px 2px 3px white;
+}
