--- a/views/bids/index.ejs
+++ b/views/bids/index.ejs
@@ -26,7 +26,7 @@
                                 <%=bid.username%>
                             </td>
                             <td>
-                                <%=bid.amount%>
+                                <%=`$${bid.amount}`%>
                             </td>
                         </tr>
                         <%});%>
